--- a/q/275587.html
+++ b/q/275587.html
@@ -27,7 +27,6 @@
     <th class="tlink">Link</th>
   </tr>
 <tr d-ix="0"><td>022</td><td>Haskell</td><td>240917T151809Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275589#275589">pxeger</a></td></tr>
-<tr d-ix="1"><td>014</td><td>Haskell</td><td>240917T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275588#275588">Khuldrae</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 22 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t=R t
@@ -35,7 +34,7 @@ R x%f=f x
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW21ISSxIVfBVKbIMUSriCFCpU02zTFCogkjcrMvOKSxLzklMV3ErzkkvyixR8ueBCjgUFOZnJiSWZZalAA8ozUotSFQpKgYStQhBClW9-XmIKXF7Dzs5WE6hAQ1WTiys3MTMPyC4oLQkuKVJQyixRSM7PLcjMSS1WgtgPcyQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>First, a definitely-correct answer. This is the identity monad: the type constructor is called <code>M</code>, the unit constructor is called <code>R</code>, and the bind combinator is called <code>(%)</code>.</p>
-<p>I defined a <code>Monad</code> instance in the footer to demonstrate that the operations have the correct types.</p>
+<p>I defined a <code>Monad</code> instance in the footer to demonstrate that the operations have the correct types. I hope it's clear why the monad laws hold.</p>
 <hr />
 <h1>Pure <a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 12 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t
@@ -45,7 +44,7 @@ z=z
 <p>By &quot;pure&quot; I mean with no exceptions and no <code>unsafePerformIO</code> etc.</p>
 <p>Highly debatable, but I think it's technically valid. My type constructor is called <code>M</code> (the resulting type just happens to have no values), my unit constructor is called <code>z</code>, and my bind combinator is also called <code>z</code>. Here's my proof of the monad laws:</p>
 <ol>
-<li><p>We must prove <code>z(z(x), f) &lt;-&gt; f(x)</code>. If <code>f</code> has type <code>a -&gt; M b</code> for some <code>a</code> and <code>b</code>, then since there are no values of type <code>M b</code>, <code>f</code> must never return (and since we're in &quot;pure&quot; Haskell, <code>f</code> <em>must</em> be an infinite loop). Likewise <code>z(z(x), f)</code> will never return because <code>z</code> will enter an infinite loop, so the two equivalents are equivalent.</p>
+<li><p>We must prove <code>z(z(x), f) &lt;-&gt; f(x)</code>. If <code>f</code> has type <code>a -&gt; M b</code> for some <code>a</code> and <code>b</code>, then since there are no values of type <code>M b</code>, <code>f</code> must never return (and since we're in &quot;pure&quot; Haskell, <code>f</code> <em>must</em> be a simple infinite loop). Likewise <code>z(z(x), f)</code> will never return because <code>z</code> will enter an infinite loop, so the two expressions are equivalent.</p>
 </li>
 <li><p>We must prove <code>z(x, z) &lt;-&gt; x</code>. Similarly to the above, <code>x</code> has the type <code>M a</code> for some a, which means evaluating <code>x</code> will never return. Equally, <code>z(x, z)</code> will never return, so they're equivalent.</p>
 </li>
@@ -80,15 +79,6 @@ R t%f=f t
 </code></pre>
 <p>The unit constructor is called <code>R</code>, and the bind combinator is called <code>(%)</code>.</p>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW-1ISSxIVfBVKbP1qghRKuPxU4239uIAs1TTbNIUSiKKbFZl5xSWJecmpCm6leckl-UUKvlxwIceCgpzM5MSSzLJUoEHlGalFqQoFpUDCViEIoco3Py8xBS6vYWdnqwlUoKGqycWVm5iZB2QXlJYElxQpKGWWKCTn5xZk5qQWK0HshzkWAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1>Haskell, 14 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>data T a
-u=u
-b=b
-</code></pre>
-<p>Make that 11 bytes if I can define only one function <code>f=f</code> and declare that it is both <code>unit</code> and <code>bind</code>.</p>
-<p>There are no non-bottom values of type <code>T a</code> for any <code>a</code>, so <code>a -&gt; T b</code> is uninhabited unless <code>a</code> is. All three laws are vacuously satisfied.</p>
 </div>
 
 <table id="st">
