--- a/q/275522.html
+++ b/q/275522.html
@@ -47,9 +47,9 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=NY5BCsMgFESvIm5UrOLXLIql9AA9grhrpEL5CcYsepZusmnv1NtUiN28mWFgmNdnftb7hNv2XmtSx-_1NiaSOApfzoGxKDF4ryDqZX7kyplm4lTGuhbkJSgbZSPEYKJsVQ_gWzJM9MlLmgrJJCPhFKx2Az3QwVkNTQ3Yxt07bXYaKvxcMlaeeBZ95v_wBw" rel="nofollow noreferrer">Try it online!</a></p>
 <ul>
-<li><p>Creates a list with 2 or 3 elements. First item is empty string. Second item is the reversed digits before the decimal point. The 3rd item is the reversed digit after the decimal point if any.</p>
+<li><p>Creates a list with 2 or 3 elements. First item is empty string. Reverse and split the given number. So second item is the reversed digits before the decimal point string, and the 3rd item is the reversed digit after the decimal point string if any.</p>
 </li>
-<li><p>Creates a string by adding the penultimate item, add a decimal point, add the last element, add '0' in case the last element is empty so your number does not ends by '.'</p>
+<li><p>Creates and returns a string by adding the penultimate item, add the first digit of the last element, add a decimal point, add the last element except 1st digit, add '0' in case the last element is empty so your number does not ends by '.'</p>
 </li>
 </ul>
 </div>
