--- a/q/275564.html
+++ b/q/275564.html
@@ -37,17 +37,17 @@
 <tr d-ix="8"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 17 bytes</h1>
-<pre><code>ƛE²DẊ²Ṡ&gt;∑;¦2Nȯ4Nβ
+<pre><code>ƛEDẊ²Ṡ√&gt;∑;¦2Nȯ4Nβ
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLGm0XCskThuorCsuG5oD7iiJE7wqYyTsivNE7OsiIsIiIsIjMiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLGm0VE4bqKwrLhuaDiiJo+4oiRO8KmMk7IrzROzrIiLCIiLCI1Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Mostly a port of <a href="https://codegolf.stackexchange.com/a/275571/100664">UnrelatedString's Jelly answer</a>. There's got to be a way to save a byte on the last bit.</p>
 <pre><code>ƛ        ;        # Over 1...n
         ∑         # Count the number of 
-   DẊ             # Pairs
- E²               # Of 1...4^m
-     ²Ṡ           # Whose squared sums
+  DẊ              # Pairs
+ E                # Of 1...2^m
+    ²Ṡ√           # Whose squared sums, sqrt'd
        &gt;          # Are less than
- E²               # 4^m
+ E                # 2^m
           ¦       # Take the cumulative sum
            2Nȯ    # Take the last two items
               4Nβ # And convert from base -4
