--- a/q/275564.html
+++ b/q/275564.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Vyxal</td><td>240917T203348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275597#275597">emanresu</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Vyxal</td><td>240917T203348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275597#275597">emanresu</a></td></tr>
 <tr d-ix="1"><td>176</td><td>Python 3</td><td>240917T185309Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275594#275594">The Empt</a></td></tr>
 <tr d-ix="2"><td>016</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
 <tr d-ix="3"><td>083</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
@@ -36,21 +36,21 @@
 <tr d-ix="7"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="8"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 17 bytes</h1>
-<pre><code>ƛEDẊ²Ṡ√&gt;∑;¦2Nȯ4Nβ
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
+<pre><code>ƛEDẊ²Ṡ√&gt;∑;¦÷$4*ε
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLGm0VE4bqKwrLhuaDiiJo+4oiRO8KmMk7IrzROzrIiLCIiLCI1Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Mostly a port of <a href="https://codegolf.stackexchange.com/a/275571/100664">UnrelatedString's Jelly answer</a>. There's got to be a way to save a byte on the last bit.</p>
-<pre><code>ƛ        ;        # Over 1...n
-        ∑         # Count the number of 
-  DẊ              # Pairs
- E                # Of 1...2^m
-    ²Ṡ√           # Whose squared sums, sqrt'd
-       &gt;          # Are less than
- E                # 2^m
-          ¦       # Take the cumulative sum
-           2Nȯ    # Take the last two items
-              4Nβ # And convert from base -4
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLGm0VE4bqKwrLhuaDiiJo+4oiRO8Kmw7ckNCrOtSIsIiIsIjUiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Mostly a port of <a href="https://codegolf.stackexchange.com/a/275571/100664">UnrelatedString's Jelly answer</a>. <s>There's got to be a way to save a byte on the last bit</s> -1 thanks to UnrelatedString.</p>
+<pre><code>ƛ        ;       # Over 1...n
+        ∑        # Count the number of 
+  DẊ             # Pairs
+ E               # Of 1...2^m
+    ²Ṡ√          # Whose squared sums, sqrt'd
+       &gt;         # Are less than
+ E               # 2^m
+          ¦      # Take the cumulative sum
+           ÷   ε # Subtract from the last item
+            $4*  # The second-to-last item times 4
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 176 bytes</h1>
