--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240917T215637Z
+"   /golfscore                                      20240917T223816Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275596.html">Fractions nobody needs (because they can be redu: 0275596</a>
 <a href="q/275514.html">ASCII 2D landscape                              : 0275514</a>
 <a href="q/275564.html">Count squares in my pi approximation            : 0275564</a>
 <a href="q/232946.html">Unfold a list using a function                  : 0232946</a>
