--- a/q/275590.html
+++ b/q/275590.html
@@ -28,11 +28,11 @@
   </tr>
 <tr d-ix="0"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>83</s> 78 bytes</h1>
-<pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKe16:Y)tP[AaABOlHN]0Y(_&amp;vhYs&quot;1500:YPE*60/@12/W*Y,E]&amp;h8e3Y#
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), 78 bytes</h1>
+<pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKe16:Y)tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
-<p>This uses equal temperament. The timbre is that of a sine wave hard-clipped at half its amplitude (which costs 1 byte but produces nicer sound than a pure sine wave).</p>
-<p>Try it at <a href="https://matl.io/?code=0%27%214XC%40nRAxt%7E%26%27F5%3AZaKe16%3AY%29tP%5BAaABOlHN%5D0Y%28_%26vhYs%221500%3AYPE%2a60%2F%4012%2FW%2aY%2CE%5D%26h8e3Y%23&amp;inputs=&amp;version=22.8.0" rel="nofollow noreferrer">MATL online</a>!</p>
+<p>This uses equal temperament, with C3 frequency 131.6 Hz (the accuracy could be improved to a tenth of a Hz by using 2 extra bytes). The timbre corresponds to a sine wave hard-clipped at half its amplitude (which costs 1 byte but produces nicer sound than a pure sine wave).</p>
+<p>Try it at <a href="https://matl.io/?code=0%27%214XC%40nRAxt%7E%26%27F5%3AZaKe16%3AY%29tP%5BAaABOlHN%5D0Y%28_%26vhYs%221875%3AYPE%2a76%2F%4012%2FW%2aY%2CE%5D%26h1e4Y%23&amp;inputs=&amp;version=22.8.0" rel="nofollow noreferrer">MATL online</a>!</p>
 </div>
 
 <table id="st">
