--- a/q/275590.html
+++ b/q/275590.html
@@ -31,7 +31,8 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), 78 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKe16:Y)tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
-<p>This uses equal temperament, with C3 frequency 131.6 Hz (the accuracy could be improved to a tenth of a Hz by using 2 extra bytes). The timbre corresponds to a sine wave hard-clipped at half its amplitude (which costs 1 byte but produces nicer sound than a pure sine wave).</p>
+<p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
+<p>The timbre corresponds to a sine wave hard-clipped at half its amplitude (this clipping costs 1 byte but produces nicer sound than a pure sine wave; the latter can be obtained by removing the <code>E</code> near the end of the code).</p>
 <p>Try it at <a href="https://matl.io/?code=0%27%214XC%40nRAxt%7E%26%27F5%3AZaKe16%3AY%29tP%5BAaABOlHN%5D0Y%28_%26vhYs%221875%3AYPE%2a76%2F%4012%2FW%2aY%2CE%5D%26h1e4Y%23&amp;inputs=&amp;version=22.8.0" rel="nofollow noreferrer">MATL online</a>!</p>
 </div>
 
