--- a/q/275564.html
+++ b/q/275564.html
@@ -26,17 +26,81 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Vyxal</td><td>240917T203348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275597#275597">emanresu</a></td></tr>
-<tr d-ix="1"><td>176</td><td>Python 3</td><td>240917T185309Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275594#275594">The Empt</a></td></tr>
-<tr d-ix="2"><td>016</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
-<tr d-ix="3"><td>083</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
-<tr d-ix="4"><td>069</td><td>Ruby</td><td>240917T084403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275580#275580">G B</a></td></tr>
-<tr d-ix="5"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
-<tr d-ix="7"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
-<tr d-ix="8"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
+<tr d-ix="0"><td>035</td><td>Charcoal</td><td>240918T014739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275602#275602">Neil</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Vyxal</td><td>240917T203348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275597#275597">emanresu</a></td></tr>
+<tr d-ix="2"><td>176</td><td>Python 3</td><td>240917T185309Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275594#275594">The Empt</a></td></tr>
+<tr d-ix="3"><td>016</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
+<tr d-ix="4"><td>083</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
+<tr d-ix="5"><td>069</td><td>Ruby</td><td>240917T084403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275580#275580">G B</a></td></tr>
+<tr d-ix="6"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
+<tr d-ix="8"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
+<tr d-ix="9"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 35 bytes</h1>
+<pre><code>ＩΣＥＸ²⮌…·¹Ｎ×ΣＥιΣＥι‹⁺Ｘ⊕λ²Ｘ⊕ν²Ｘι²∨¬κ±³
+</code></pre>
+<p><a href="https://tio.run/##ZY3LCsIwEEV/JcspxIUV3Lh0VdBaqj8Q66UGk7TkUT8/Dq0UwYGBO5yZM91T@W5QJufGaxfpqEKka7J0ViM1wxueSilaTPABVLnOpKAntMr1oK0UlRtTrJO982LBJcVNW4RVoaX4iSeEQA0rvmr2eVi4iAcZvi25/4mbyYr0PC3PLp7qIdKLY41eRdBuQcUh533eTOYD" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>    ²                               Literal integer `2`
+   Ｘ                                Vectorised raised to power
+      …·                            Inclusive range from
+        ¹                           Literal integer `1` to
+         Ｎ                          Input as an integer
+     ⮌                              Reversed
+  Ｅ                                 Map over values
+             ι                      Current value
+            Ｅ                       Map over implicit range
+                ι                   Current value
+               Ｅ                    Map over implicit range
+                     λ              Inner value
+                    ⊕               Incremented
+                   Ｘ                Raised to power
+                      ²             Literal integer `2`
+                  ⁺                 Plus
+                         ν          Innermost value
+                        ⊕           Incremented
+                       Ｘ            Raised to power
+                          ²         Literal integer `2`
+                 ‹                  Is less than
+                            ι       Current value
+                           Ｘ        Raised to power
+                             ²      Literal integer `2`
+              Σ                     Take the sum
+           Σ                        Take the sum
+          ×                         Multiplied by
+                                κ   Current index
+                               ¬    Is zero
+                              ∨     Logical Or
+                                  ³ Literal integer `3`
+                                 ±  Negated
+ Σ                                  Take the sum
+Ｉ                                   Cast to string
+                                    Implicitly print
+</code></pre>
+<p>I tried a more &quot;graphical&quot; version but it came out to be 56 bytes:</p>
+<pre><code>≔Ｘ²Ｎθ⊞υＥ³θＦυ¿›ΣＸ…ι²¦²Ｘθ²«≔÷↨ι⁰¦²η¿ηＦ⁴⊞υＥι⎇＆κＸ²μλ⁻λη»Ｍ→Ｉⅈ
+</code></pre>
+<p><a href="https://tio.run/##TY9NawJBDIbP7q/IMYEtiJYe2pNuQTxYpO2h1@kandDZ2XU@VqT0t09n1EIPCSR58z5Jq5Vre2VSWngvB4vb/sQOZzWs7RDDS@w@c0lUw5Geqm30GmMNGzXgvLRyb987wEgge8CVYxWy/i12N6Pm3BpudD@g1DCjEjldZ8dLRfBdTW7wtQ3PMsqOcak8l5UpXdd0Jk0KQhNciPcE/6/J0nd2VrkzLiWcxPPC7vDrD5X/6QrYZLXY6NEUSyr3/1RsPMOmHxkfX@WgQ3nUiQ3YKB/wA4sspYd0N5pf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>≔Ｘ²Ｎθ
+</code></pre>
+<p>Take <code>2</code> to the power of the input.</p>
+<pre><code>⊞υＥ³θＦυ
+</code></pre>
+<p>Construct a square of that size and loop over squares are they are generated.</p>
+<pre><code>¿›ΣＸ…ι²¦²Ｘθ²«
+</code></pre>
+<p>If this square does not fit inside the circle, then...</p>
+<pre><code>≔÷↨ι⁰¦²η¿η
+</code></pre>
+<p>Halve the size of the square; if the square still has a size, then...</p>
+<pre><code>Ｆ⁴⊞υＥι⎇＆κＸ²μλ⁻λη
+</code></pre>
+<p>... push the four quarters of the original square to be checked.</p>
+<pre><code>»Ｍ→Ｉⅈ
+</code></pre>
+<p>Output the total number of squares found.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
 <pre><code>ƛEDẊ²Ṡ√&gt;∑;¦÷$4*ε
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLGm0VE4bqKwrLhuaDiiJo+4oiRO8Kmw7ckNCrOtSIsIiIsIjUiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -53,7 +117,7 @@
             $4*  # The second-to-last item times 4
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 176 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 176 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>x=a=0;y=1
 while 1:x*=4;z=len([*filter(lambda x:x[0]**2+x[1]**2&lt;4,(lambda i:[(x*i,y*i)for x in range(1,int(2/i+1))for y in range(1,int(2/i+1))])(y))])-x;a+=z;print(a);y/=2;x+=z;
@@ -64,7 +128,7 @@ while 1:x*=4;z=len([*filter(lambda x:x[0]**2+x[1]**2&lt;4,(lambda i:[(x*i,y*i)fo
 <p>It does this next paragraph forever:</p>
 <p>It multiplies x by 4. It then creates a list of the possible top-right corners of the squares with size <code>y</code>, then removes the vertices which do not satisfy the condition <span class="math-container">\$x^2+y^2&lt;4\$</span>. It sets <code>z</code> to the number of vertices which haven't been removed. minus <code>x</code> from it. <code>z</code> is added to <code>a</code>. It prints the current value of <code>a</code>, and then divides <code>y</code> by <span class="math-container">\$2\$</span>, and adds <code>z</code> to x.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
 <pre><code>4*p`ḋ`&lt;Ɗ)§Äṫ-ḅ-4
 </code></pre>
 <p><a href="https://tio.run/##AScA2P9qZWxsef//NCpwYOG4i2A8xoopwqfDhOG5qy3huIUtNP/Dhyn//zU" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -106,7 +170,7 @@ while 1:x*=4;z=len([*filter(lambda x:x[0]**2+x[1]**2&lt;4,(lambda i:[(x*i,y*i)fo
 <p><a href="https://tio.run/##AUAAv/9qZWxsef//VcK7XFUpCjIqUsKy4bqhwrLGssK9UuG7jTLDhzIqwqtaZ0rigqzGssOHRsSwwrJT/8OHKVn//zEw" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Hacked together to try to do it graphically. Miraculously seems to work.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> <s>93</s> 83 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> <s>93</s> 83 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda m:sum((4**n-i*i)**.5//1*(n//m*4-3)for n in range(m+1)for i in range(1,2**n))
 </code></pre>
@@ -116,14 +180,14 @@ while 1:x*=4;z=len([*filter(lambda x:x[0]**2+x[1]**2&lt;4,(lambda i:[(x*i,y*i)fo
 <p>(Old: <code>f</code> calculates A156790 and the first lambda function takes the sum of the first <code>n</code> terms of A177144.)</p>
 <p>Same as old, but <code>f</code> is combined with <code>g</code> by using a double <code>for</code> loop and <code>(n//m*4-3)</code>, which in this context is <code>1</code> only for <code>n==m</code> and <code>-3</code> otherwise.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>93 ...</s> 69 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>93 ...</s> 69 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{-3*(1..n).sum{|x|n=(1..2**x).sum{|i|((4**x-i*i)**0.5).to_i}}+n*4}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y6vWtdYS8NQTy9PU6@4NLe6pqImzxbEN9LSqoAKZdZoaJgAubqZWpmaWloGeqaaeiX58Zm1tdp5Wia1/wsUQBoMDTT1chMLNNTSNP8DAA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Using the same approach as @David Chew in his Python solution, avoiding recursion makes it shorter and faster.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 125 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 125 bytes</h1>
 <p>use quick <code>floorSqrt</code> from <a href="https://mathematica.stackexchange.com/a/165047/79318">this answer</a>.</p>
 <hr />
 <p><a href="https://tio.run/##HctPC4IwHMbxu69CPJXM9qdORSBEdRU9/pi1ZNpg/lZzQRC9djOPD9/P06tw170KplHjwWrlITlbd1P2miZyNw45Xrb7k3XOQ/X0ASodCq8bMxiHgKTUyh7fD4caA/AVYxwlFVLKqJ2f1auHARabGjNTi6UkH0M4EdPkXxl1s5lktk7/sgUzC0bmPnYxzeNSYaeBkVgwGVNaeINh/AE" rel="nofollow noreferrer">Try it online!</a></p>
@@ -132,7 +196,7 @@ f@n_:=Sum[s[(4^n-i^2)],{i,1,2^n-1}]
 g@n_:=f@n-3*Sum[f[i],{i,0,n-1}]
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>173</del> 169 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>173</del> 169 bytes</h1>
 <p>Saved 4 bytes thanks to @Unrelated String</p>
 <hr />
 <p>Golfed version. <a href="https://ato.pxeger.com/run?1=NY6xTsMwFEX3fsVT1OG5kqM0XVBFkEAsSDAhpqqDW2Jj5DwH26FCqH_BxlIGkBBf1L_BcdLFfr7v-p77-eO3wojF3yrjZHfCUbY-ftjNc70NcCc0wfsE4LGW0MQHCqf8Ei6dE2-r--A0qTVbwgPpAFVyAkjrADWccyggWCgLNi4AXoUBV_vO9G6Fmo16G4OCIfSZwqlmcTkdbNng2Mdz_90Fyc-Ov31IW11pdUMBS5a3djfp-0mkZZRYhfOIbZFYHmwU-JzljWhRVxeNCE-5NNY6TKN_cQGxxXJGjI-JOiXG4P77te02pk7jrSXFct81CaZOsEhlfDHDIjLphJLJOBT-GosfDsP9Dw" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -209,12 +273,12 @@ for i in range(21):
     print(f&quot;g({i}) = {result}&quot;)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, 121 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, 121 bytes</h1>
 <p><a href="https://tio.run/##bcxNDoIwEEDh25CZ/gWiOyiJG3Z6AWPMCBVraKsFTIx69srOjev35V3pQWMb7W2SPnQmpV57XUOjna73SqlNjPSEoqocHlQ03dwaABJHYXFhNsu2NF3UeI8TrBlz0jKL7xw5iRwRPMrfxP85EF@xBiwuOp1DBNJ5SVVRlPhqgx/DYNQQeuhhN7uTWTrniPhJXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <pre class="lang-js prettyprint-override"><code>g=n=&gt;(F=m=&gt;[...Array(1&lt;&lt;m)].reduce((a,_,i)=&gt;(i&amp;&amp;Math.sqrt(4**m-i*i)|0)+a,0))(n)-[...Array(n)].reduce((a,_,i)=&gt;a+3*F(i),0)
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10, 173 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10, 173 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>@c=[0,0,2,2];while(1){@c=grep<span class="math-container">$$_[2]**2+$$</span>_[3]**2&lt;4?0*$n++:1,map{($a,$b,$c,$d)=@$_;$X=($a+$c)/2;$Y=($b+$d)/2;[$a,$b,$X,$Y],[$X,$b,$c,$Y],[$a,$Y,$X,$d],[$X,$Y,$c,$d]}@c;say$n}
 </code></pre>
