--- a/q/275596.html
+++ b/q/275596.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>073</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
+<tr d-ix="0"><td>072</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 73 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 72 bytes</h1>
 <p>Prints the sequence indefinitely.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>for(a=0;;)for(b=++a;--b;)(G=(a,b)=&gt;b?G(b,a%b):a)(a,b)&gt;1&amp;&amp;print(a-b+`
+<pre class="lang-javascript prettyprint-override"><code>for(a=0;G=(a,b)=&gt;b?G(b,a%b):a;)for(b=++a;--b;)G(a,b)&gt;1&amp;&amp;print(a-b+`
 `+b)
 </code></pre>
-<p><a href="https://tio.run/##HchBCoAgEADAe/9IdlGhbpGsHf2Gu0FghxITv2/UbZiTGz97SbnatvR@3AWYJufwk5DW7KwVhxAI2AiSly2AGB4FV8b//KxULumqwFZ0HKIW7P0F" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
-<p><a href="https://tio.run/##HchBCoAgEADA1yS7qFS3SNaOfsPdILBDiYnfN@o2zMmNn72kXG1bej/uAkyTc/hJSGt21opDCARsBMnLFkAMD4Ir439@ViqXdFVgKzqOUQv2/gI" rel="nofollow noreferrer">More readable output</a></p>
+<p><a href="https://tio.run/##HcpBCoAgEADAe/9IXHShbtGiHf2Gu0FghxITv2/Ueebkxs9eUq7Ylt6Pu2h2EwWn2Qo4L1vQYnkUWJngY3HGMCEKQfiTn5XKJV1VM4qJQzQCvb8" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##HcpBCoAgEADA1yS76FLdItGOfsPdILBDiYnfN@o8c3LjZy8pV2pL78ddgN1kgwM2gs7LFkAMD4IrW/xYnNZsicRi@JOflcolXRWYRMcxasHeXw" rel="nofollow noreferrer">More readable output</a></p>
 </div>
 
 <table id="st">
