--- a/q/57193.html
+++ b/q/57193.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td></td><td>240918T063314Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275603#275603">Aaron</a></td></tr>
+<tr d-ix="0"><td>066</td><td>Red</td><td>240918T075750Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275604#275604">Galen Iv</a></td></tr>
 <tr d-ix="1"><td>005</td><td>Vyxal</td><td>210618T052227Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/229935#229935">emanresu</a></td></tr>
 <tr d-ix="2"><td>005</td><td>Vyxal 3 j</td><td>240913T121249Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275508#275508">pacman25</a></td></tr>
 <tr d-ix="3"><td>006</td><td>Perl 5 + p040l012</td><td>150907T125848Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/57197#57197">Dom Hast</a></td></tr>
@@ -66,25 +66,10 @@
 <tr d-ix="37"><td>009</td><td>Pyth</td><td>150907T130911Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/57198#57198">isaacg</a></td></tr>
 <tr d-ix="38"><td>010</td><td>CJam</td><td>150907T124225Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/57194#57194">Optimize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><hr />
-<h2>APL</h2>
-<pre><code>↑(⍴∘'*'≢)¨(' '∘≠⊆)
+<div id="pu0" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 66 bytes</h1>
+<pre><code>func[s][r:[not sp skip]parse s[any[change r&quot;*&quot;| change to r lf]]s]
 </code></pre>
-<p>A tacit train I think?</p>
-<hr />
-<p>Explanation</p>
-<pre><code>↑(⍴∘'*'≢)¨(' '∘≠⊆)
-          (      )  ⍝ First train:
-           ' '∘≠    ⍝ Bind not-equals with space (f)
-                ⊆   ⍝ Partition                  (g)
-          (' '∘≠⊆)  ⍝ Train calls x f g x
-         ¨          ⍝ Apply the next train to each of the space-partitioned results (individual words)
- (      )           ⍝ Second train:
-  ⍴∘'*'             ⍝ Bind reshape with '*' (f)
-       ≢            ⍝ Tally/length          (g)
- (⍴∘'*'≢)           ⍝ Train calls x f g x, i.e. make as many '*' as the length of the word
-↑                   ⍝ Mix this array of arrays into a matrix 
-</code></pre>
+<p><a href="https://tio.run/##NYzBCsIwEETP9iuGHP2EfoZ4W/YQ001bbJOwG9GC/x6DKAwMM7wZlaldZCIe4tjiIwUyJh0p5QorsPtauHg1gZFPB4XFp1mg7uze@IWaodgis3GLWcWHBQYaTu66rIYunyAvv5dN0JuaZ/U7csQz64RN0lwX1/EpP24dseKD4L9wA1PRNVVQyOXoz1tE/Bpz@wA" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 5 bytes</h1>
 <pre><code>⌈ꜝ@×*
