--- a/q/275596.html
+++ b/q/275596.html
@@ -26,9 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>059</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
+<tr d-ix="0"><td>019</td><td>05AB1E</td><td>240918T080738Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275605#275605">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>059</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>∞εL¨Ryδ‚ʒ¿≠}εηíÆR€,
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275599/52210"><em>@Arnauld</em>'s JavaScript answer</a>, so make sure to upvote that answer as well!<br />
+Also outputs the infinite sequence on separated newlines.</p>
+<p><a href="https://tio.run/##ATgAx/9vc2FiaWX//@KIns61TMKoUnnOtOKAmsqSwr/iiaB9zrXOt8Otw4ZS4oKsLP///y0tbm8tbGF6eQ" rel="nofollow noreferrer">Try it online.</a><br />
+<a href="https://tio.run/##ATEAzv9vc2FiaWX//@KIns61TMKoUnnOtOKAmsqSwr/iiaB9zrXOt8Otw4ZSJy/DvV3LnP//" rel="nofollow noreferrer">Try it online with more readable format.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>∞          # Push an infinite positive list: [1,2,3,...]
+ ε         # Map each value to:
+  L        #  Convert it to a list in the range [1,value]
+   ¨R      #  Remove the last item and reverse it: range (value,1]
+      δ    #  Map over each inner number
+     y ‚   #   Pair it with the current value
+  ʒ        #  Filter this list of pairs by:
+   ¿       #   Check the pair's GCD (Greatest Common Divisor)
+    ≠      #   Check that this is NOT 1
+  }ε       #  After the filter: map over each pair [b,a]:
+    η      #   Get its prefixes: [[b],[b,a]]
+     í     #   Reverse each: [[b],[a,b]]
+      Æ    #   Reduce each by subtracting: [b,a-b]
+       R   #   Reverse the pair: [a-b,b]
+        €  #   Map over both values:
+         , #    Output it with trailing newline
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
 <p><em>-13 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a>!</em></p>
 <p>Prints the sequence indefinitely.</p>
 
