--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240918T114113Z
+"   /golfscore                                      20240918T115421Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/48355.html">Find the next 1-sparse binary number            : 0048355</a>
 <a href="q/106976.html">Hex Dump your Source Code                       : 0106976</a>
 <a href="q/241357.html">Implement an argwhere function                  : 0241357</a>
 <a href="q/57193.html">Horizontal graph of word length                 : 0057193</a>
