--- a/q/275590.html
+++ b/q/275590.html
@@ -26,9 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="0"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
+<tr d-ix="1"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), 78 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/bear24rw/alsa-utils" rel="nofollow noreferrer">alsa-utils</a>, 190 bytes</h1>
+<p>xxd dump:</p>
+<pre><code>00000000: 4d54 6864 0000 0006 0001 0002 00dc 4d54  MThd..........MT
+00000010: 726b 0000 0013 00ff 5103 07a1 2000 ff58  rk......Q... ..X
+00000020: 0404 0218 0801 ff2f 004d 5472 6b00 0000  ......./.MTrk...
+00000030: 8d00 c000 0090 3050 0034 5000 3750 8670  ......0P.4P.7P.p
+00000040: 3000 0034 0000 3700 0039 5000 3d50 0040  0..4..7..9P.=P.@
+00000050: 5086 7030 5000 3450 0037 5000 3900 003d  P.p0P.4P.7P.9..=
+00000060: 0000 4000 8670 3000 0034 0000 3700 0039  ..@..p0..4..7..9
+00000070: 5000 3d50 0040 5086 7035 5000 3900 0039  P.=P.@P.p5P.9..9
+00000080: 5000 3c50 003d 0000 4000 8670 3500 0038  P.&lt;P.=..@..p5..8
+00000090: 5000 3900 003c 0000 3c50 003f 5086 7038  P.9..&lt;..&lt;P.?P.p8
+000000a0: 0000 3a50 003c 0000 3e50 003f 0000 4150  ..:P.&lt;..&gt;P.?..AP
+000000b0: 8670 3a00 003e 0000 4100 01ff 2f00       .p:..&gt;..A.../.
+</code></pre>
+<p>Environment: A modern linux computer, with alsa installed (default in many distributions, though becoming superseded by pipewire), and a midi card installed (could be a USB midi card) available at midi port x.</p>
+<p>to play:
+save code to a file, then</p>
+<pre><code>aplaymidi --port=x.0 &lt;filepath&gt;
+</code></pre>
+<p>as you can probably guess, this is just a straight up midi file I generated with the appropriate notes and tempo.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), 78 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKe16:Y)tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
 <p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
