--- a/q/275564.html
+++ b/q/275564.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>APL Dyalog Extended</td><td>240918T124539Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275610#275610">akamayu</a></td></tr>
+<tr d-ix="0"><td>030</td><td>APL Dyalog Extended</td><td>240918T124539Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275610#275610">akamayu</a></td></tr>
 <tr d-ix="1"><td>069</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="2"><td>035</td><td>Charcoal</td><td>240918T014739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275602#275602">Neil</a></td></tr>
 <tr d-ix="3"><td>016</td><td>Vyxal</td><td>240917T203348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275597#275597">emanresu</a></td></tr>
@@ -38,15 +38,24 @@
 <tr d-ix="9"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
 <tr d-ix="10"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, 31 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <strike>31</strike> 30 bytes</h1>
+<p>Let <span class="math-container">\$G_i\$</span> be the number of integer grid points that reside in the first quarter of a circle with radius of <span class="math-container">\$2^i\$</span> unit. (Not on the circle, nor on the axis.)
+Then the sequence <span class="math-container">\$ S \$</span> can be written as <span class="math-container">\$ S_i = \sum_{j=0}^i G_j-4G_{j-1} = G_i - 3\sum_{j=0}^{i-1}G_j\$</span>,</p>
+<pre><code>(⊢⌿-1⊥3×1↓⌽)2{≢⍸⍵&gt;|∘.⌾⍨⍳⍵}¨⍤*⍳
 
-<pre class="lang-apl prettyprint-override"><code>+\2{⍵-4×⍺}/1{≢⍸⍵&gt;|∘.⌾⍨⍳⍵}¨⍤,2*⍳
+
+             {≢⍸⍵&gt;|∘.⌾⍨⍳⍵}     ⍝ Number of points resides in the first quarter
+
+            2             ¨⍤*⍳ ⍝ For radius of r in [1, 2, 4, 8, 16, ..., 2^n]
+
+(⊢⌿-1⊥3×1↓⌽)                   ⍝ The last one minus three times of the sum of the others  
 </code></pre>
-<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/7VjjKof9W7VNTk8/VHvrlp9w@pHnYse9e4AitnVPOqYofeoZ9@j3hWPejcDRWoPARlLdIy0gNz/aUD9j3r7IEZ1NR9ab/yobSKQFxzkDCRDPDyD/6cpGBr8BwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online!</a></p>
-<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>39 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<pre class="lang-apl prettyprint-override"><code>+\2{⍵-4×⍺}/1{≢⍸⍵&gt;|∘.(⊣+0J1×⊢)⍨⍳⍵}¨⍤,2*⍳
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/zUedS161LNf1/BR11Ljw9MNH7VNftSzV9Oo@lHnoke9Ox71brWredQxQ@9Rz75HvSse9W4GitQeAjKWaAE5/9OAhjzq7YOY19V8aL3xo7aJQF5wkDOQDPHwDP6fBlK92dDgPwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/7VjjKof9W7VNTk8/VHvrlp9w@pHnYse9e4AitnVPOqYofeoZ9@j3hWPejcDRWoPARlLdIy0gNz/aUD9j3r7IEZ1NR9ab/yobSKQFxzkDCRDPDyD/6cpGBr8BwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online! 31 bytes</a></p>
+<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>38 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<pre><code>(⊢⌿-1⊥3×1↓⌽)2{≢⍸⍵&gt;|∘.(⊣+0J1×⊢)⍨⍳⍵}¨⍤*⍳
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=044xqn7Uu1XX5PD0R727avUNqx91LnrUuwMoZlfzqGOGnsajrsXaBl6GQPmuRZqPelc86t0MlKw9BGQs0THSAnIB&amp;f=K1F41DZBIU0hhOtR28SSQyse9W42NAAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=03jUtehRz35dw0ddS40PTzd81Db5Uc9eTaPqR52LHvXueNS71a7mUccMPY1HXYu1DbwMD08HatB81LviUe9moGTtISBjiRaQAwA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W42NAAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, <s>121</s> <s>114 </s> 69 bytes</h1>
 <p><strong>Versions:</strong><br>
