--- a/q/275564.html
+++ b/q/275564.html
@@ -40,7 +40,7 @@
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <strike>31</strike> 30 bytes</h1>
 <p>Let <span class="math-container">\$G_i\$</span> be the number of integer grid points that reside in the first quarter of a circle with radius of <span class="math-container">\$2^i\$</span> unit. (Not on the circle, nor on the axis.)
-Then the sequence <span class="math-container">\$ S \$</span> can be written as <span class="math-container">\$ S_i = \sum_{j=0}^i G_j-4G_{j-1} = G_i - 3\sum_{j=0}^{i-1}G_j\$</span>,</p>
+Then the sequence <span class="math-container">\$ S \$</span> can be written as <span class="math-container">\$ S_i = \sum_{j=0}^i G_j-4G_{j-1} = G_i - 3\sum_{j=0}^{i-1}G_j\$</span>. Since in the <span class="math-container">\$i\$</span>th level, <span class="math-container">\$ 4G_{i-1} \$</span> of squares within <span class="math-container">\$ G_i \$</span> were already covered by levels <span class="math-container">\$j&lt;i\$</span>.</p>
 <pre><code>(⊢⌿-1⊥3×1↓⌽)2{≢⍸⍵&gt;|∘.⌾⍨⍳⍵}¨⍤*⍳
 
 
