--- a/q/275564.html
+++ b/q/275564.html
@@ -39,8 +39,7 @@
 <tr d-ix="10"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <strike>31</strike> 30 bytes</h1>
-<p>Let <span class="math-container">\$G_i\$</span> be the number of integer grid points that reside in the first quarter of a circle with radius of <span class="math-container">\$2^i\$</span> unit. (Not on the circle, nor on the axis.)
-Then the sequence <span class="math-container">\$ S \$</span> can be written as <span class="math-container">\$ S_i = \sum_{j=0}^i G_j-4G_{j-1} = G_i - 3\sum_{j=0}^{i-1}G_j\$</span>. Since in the <span class="math-container">\$i\$</span>th level, <span class="math-container">\$ 4G_{i-1} \$</span> of squares within <span class="math-container">\$ G_i \$</span> were already covered by levels <span class="math-container">\$j&lt;i\$</span>.</p>
+<p>A train that takes <span class="math-container">\$n\$</span> as input and outputs the <span class="math-container">\$n\$</span>th term.</p>
 <pre><code>(⊢⌿-1⊥3×1↓⌽)2{≢⍸⍵&gt;|∘.⌾⍨⍳⍵}¨⍤*⍳
 
 
@@ -50,6 +49,8 @@ Then the sequence <span class="math-container">\$ S \$</span> can be written as 
 
 (⊢⌿-1⊥3×1↓⌽)                   ⍝ The last one minus three times of the sum of the others  
 </code></pre>
+<p>Let <span class="math-container">\$G_i\$</span> be the number of integer grid points that reside in the first quarter of a circle with radius of <span class="math-container">\$2^i\$</span> unit. (Not on the circle, nor on the axis.)
+Then the sequence <span class="math-container">\$ S \$</span> can be written as <span class="math-container">\$ S_i = \sum_{j=0}^i G_j-4G_{j-1} = G_i - 3\sum_{j=0}^{i-1}G_j\$</span>. Since in the <span class="math-container">\$i\$</span>th level, <span class="math-container">\$ 4G_{i-1} \$</span> of squares within <span class="math-container">\$ G_i \$</span> were already covered by levels <span class="math-container">\$j&lt;i\$</span>.</p>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/zUedS161LNf1/BR11Ljw9MNH7VNftSzV9Oo@lHnoke9Ox71brWredQxQ@9Rz75HvSse9W4GitQeAjKWaAE5/9OAhjzq7YOY19V8aL3xo7aJQF5wkDOQDPHwDP6fBlK92dDgPwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online!</a></p>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/7VjjKof9W7VNTk8/VHvrlp9w@pHnYse9e4AitnVPOqYofeoZ9@j3hWPejcDRWoPARlLdIy0gNz/aUD9j3r7IEZ1NR9ab/yobSKQFxzkDCRDPDyD/6cpGBr8BwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online! 31 bytes</a></p>
 <h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>38 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
