--- a/q/275564.html
+++ b/q/275564.html
@@ -53,10 +53,13 @@
 Then the sequence <span class="math-container">\$ S \$</span> can be written as <span class="math-container">\$ S_i = \sum_{j=0}^i G_j-4G_{j-1} = G_i - 3\sum_{j=0}^{i-1}G_j\$</span>. Since in the <span class="math-container">\$i\$</span>th level, <span class="math-container">\$ 4G_{i-1} \$</span> of squares within <span class="math-container">\$ G_i \$</span> were already covered by levels <span class="math-container">\$j&lt;i\$</span>.</p>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/zUedS161LNf1/BR11Ljw9MNH7VNftSzV9Oo@lHnoke9Ox71brWredQxQ@9Rz75HvSse9W4GitQeAjKWaAE5/9OAhjzq7YOY19V8aL3xo7aJQF5wkDOQDPHwDP6fBlK92dDgPwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online!</a></p>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNrShJzUtJTfn/qG@qp/@jtgmG/7VjjKof9W7VNTk8/VHvrlp9w@pHnYse9e4AitnVPOqYofeoZ9@j3hWPejcDRWoPARlLdIy0gNz/aUD9j3r7IEZ1NR9ab/yobSKQFxzkDCRDPDyD/6cpGBr8BwA" rel="nofollow noreferrer" title="APL (Dyalog Extended) – Try It Online">Try it online! 31 bytes</a></p>
-<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>38 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<pre><code>(⊢⌿-1⊥3×1↓⌽)2{≢⍸⍵&gt;|∘.(⊣+0J1×⊢)⍨⍳⍵}¨⍤*⍳
+<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>38</strike> 33 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<pre><code>(⊢⌿-1⊥3×1↓⌽)2(≢∘⍸×⍨&gt;⍳∘.+⍨⍤×⍳)¨⍤*⍳
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=03jUtehRz35dw0ddS40PTzd81Db5Uc9eTaPqR52LHvXueNS71a7mUccMPY1HXYu1DbwMD08HatB81LviUe9moGTtISBjiRaQAwA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W42NAAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<pre><code>(⊢⌿-1⊥3×1↓⌽)2(≢∘⍸×&gt;∘.+⍨⍤×⍥⍳)⍨¨⍤*⍳
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=03jUtehRz35dw0ddS40PTzd81Db5Uc9eTSONR52LHnXMeNS74/D0R70r7B71bgZy9bSB7Ee9S0BimzUPgZhaQBYA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W42AwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=03jUtehRz35dw0ddS40PTzd81Db5Uc9eTaPqR52LHvXueNS71a7mUccMPY1HXYu1DbwMD08HatB81LviUe9moGTtISBjiRaQAwA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W42NAAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! 38 bytes</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, <s>121</s> <s>114 </s> 69 bytes</h1>
 <p><strong>Versions:</strong><br>
