--- a/q/57193.html
+++ b/q/57193.html
@@ -69,18 +69,18 @@
 <tr d-ix="40"><td>010</td><td>CJam</td><td>150907T124225Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/57194#57194">Optimize</a></td></tr>
 </table>
 <div id="pu0" class="pu"><hr />
-<h2>APL, 14 bytes</h2>
-<pre><code>'*'/⍨⍤1↑⊆⍨' '≠
+<h2>APL, 13 bytes</h2>
+<pre><code>↑'*'/⍨¨⊆⍨' '≠
 </code></pre>
 <hr />
 <p>Explanation</p>
-<pre><code>'*'/⍨⍤1↑⊆⍨' '≠
+<pre><code>↑'*'/⍨¨⊆⍨' '≠
 
-          ' '≠  ⍝ Find which chars are not spaces
-        ⊆⍨      ⍝     and partition that with itself to get as many 1's as letters per word
-       ↑        ⍝ Mix into a matrix
-'*'/⍨           ⍝ Apply replicate on '*', switching the args
-     ⍤1         ⍝     on rank 1 of the matrix (i.e. across each row)
+         ' '≠  ⍝ Find which chars are not spaces
+       ⊆⍨      ⍝     and partition that with itself to get as many 1's as letters per word
+ '*'/⍨         ⍝ Apply replicate on '*', switching the args
+      ¨        ⍝     on each array
+↑              ⍝ Mix into a matrix
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, 30 bytes</h1>
